@@ -1099,9 +1099,10 @@ typedef struct __hc_device_param hc_device_param_t;
 #ifdef HAVE_HWMON
 typedef struct
 {
-  HM_ADAPTER_ADL   adl;
-  HM_ADAPTER_NVML  nvml;
-  HM_ADAPTER_NVAPI nvapi;
+  HM_ADAPTER_ADL     adl;
+  HM_ADAPTER_NVML    nvml;
+  HM_ADAPTER_NVAPI   nvapi;
+  HM_ADAPTER_XNVCTRL xnvctrl;
 
   int od_version;
 
@@ -1177,6 +1178,7 @@ typedef struct
   void      *hm_adl;
   void      *hm_nvml;
   void      *hm_nvapi;
+  void      *hm_xnvctrl;
   hm_attrs_t hm_device[DEVICES_MAX];
   #endif
 
